[package]
name = "my-gdnative-lib"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = { version = "0.9.3", default-features = false, features = [] }
gdnative-bindings-custom = { path = "../gdnative-bindings-0.9.3" }